# Hexplore_VREP

./: CMakeLists.txt  README.md  common.cpp  common.h
Hexplore/: SimulationRobot.cpp  SimulationRobot.h  main.cpp
Hexplore.xcodeproj/: project.pbxproj
Hexplore.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Hexplore.xcodeproj/project.xcworkspace/xcuserdata/Melanie.xcuserdatad/: UserInterfaceState.xcuserstate
Hexplore.xcodeproj/xcshareddata/xcschemes/: Hexplore.xcscheme
Hexplore.xcodeproj/xcuserdata/Melanie.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Hexplore.xcodeproj/xcuserdata/Melanie.xcuserdatad/xcschemes/: xcschememanagement.plist
Robot/: Robot.h  Robot_VREP.cpp  Robot_VREP.h
Simulation/: Odometry.cpp  Odometry.h  OrientationController.cpp  OrientationController.h  Simulation.cpp  Simulation.h  SimulationRobot.cpp  SimulationRobot.h  walk_cpg.cpp  walk_cpg.h  walk_tripod.cpp  walk_tripod.h
Test/: main.cpp  testSim.cpp  testSim.h
